Cambios adicionales numero 1

--- a/Pages/Consultas/C_Articulos.razor
+++ b/Pages/Consultas/C_Articulos.razor
@@ -119,8 +119,7 @@
 
                         <td>@item.ITBIS %</td>
 
-                        <td>@Fecha</td>
-
+                        <td>@item.FechaCreacion.ToString("dd/MM/yyyy")</td>
                         <td>
                             <a class="btn btn-sm btn-outline-success oi oi-eye" href="articulo/@item.ArticuloId"></a>
                         </td>
