--- a/Pages/Consultas/C_Suplidor.razor
+++ b/Pages/Consultas/C_Suplidor.razor
@@ -101,7 +101,6 @@
             {
                 @foreach (var item in suplidorList)
                 {
-                    Fecha = DateOnly.FromDateTime(item.Fecha);
                     <tr>
                         <td>@item.Nombre</td>
 
@@ -113,7 +112,7 @@
 
                         <td>@item.DescripcionArticulo</td>
 
-                        <td>@Fecha</td>
+                        <td>@item.Fecha.ToString("dd/MM/yyyy")</td>
 
                         <td>
                             <a class="btn btn-sm btn-outline-success oi oi-eye" href="suplidor/@item.SuplidorId"></a>
