--- a/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/Areas/Identity/Pages/_ViewImports.cshtml
@@ -2,4 +2,4 @@
 @using ProyectoFinal.Areas.Identity
 @using ProyectoFinal.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using Models
+@using ProyectoFinal.Models
