--- a/Pages/Shared/_LoginPartial.cshtml
+++ b/Pages/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using Models
+@using ProyectoFinal.Models
 
 @inject SignInManager<Usuarios> SignInManager
 @inject UserManager<Usuarios> UserManager
