--- a/_Imports.razor
+++ b/_Imports.razor
@@ -9,7 +9,7 @@
 @using ProyectoFinal
 @using ProyectoFinal.Shared
 
-@using Models
+@using ProyectoFinal.Models
 @using Blazored.Toast   
 @using Blazored.Toast.Services 
 @using BlazorStrap
