--- a/Pages/Consultas/Inventario.razor
+++ b/Pages/Consultas/Inventario.razor
@@ -98,7 +98,7 @@
 
             <div class="form-group col-md-3" style="margin: auto;">
                 <a class="rz-border-radius-4 shadow border border-4 btn btn-lg btn btn-primary" data-toggle="tooltip"
-                   data-placement="right" title="Realizar orden de compra" href="newarticulo">
+                   data-placement="right" title="Realizar orden de compra" href="compra">
                     Orden de
                     compra
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-bag-plus-fill" viewBox="0 0 16 16">
