--- a/Pages/Consultas/Compras.razor
+++ b/Pages/Consultas/Compras.razor
@@ -1,8 +1,8 @@
-@page "/newarticulo"
+@page "/compra"
 
-@page "/newarticulo/{NewArticuloId:int}"
+@page "/compra/{CompraId:int}"
 
-@* Registro de nuevos articulos *@
+@* Registro de compras *@
 
 @inject AuthenticationStateProvider Authentication
 
@@ -10,38 +10,21 @@
 
 @using BLL
 
-<EditForm Model="articulo" OnValidSubmit="Guardar">
+<EditForm Model="compra" OnValidSubmit="Guardar">
     <DataAnnotationsValidator />
     
-
-    <div class="card shadow border border-4 rz-border-radius-4 card-footer d-flex justify-content-center" display: inline-block>
-
-        <p />
-
-        @*...................... Consultar Articulo ......................*@
-
-
-        <a type="button" class="rz-border-radius-4 shadow border border-4 btn-lg btn btn-warning" data-toggle="tooltip" style=""
-           data-placement="right" title="Regresar al inventario" href="inventario">
-            <i class="oi oi-arrow-circle-left" />
-        </a>
-        <div class="form-group align-right" style="margin: auto;">
-            <a class="rz-border-radius-4 shadow border border-4 btn btn-lg bg-inventariocolor"
-               data-toggle="tooltip" data-placement="right" title="Ingresar al inventario"
-               href="inventario">
-                Inventario
-                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-minecart-loaded" viewBox="0 0 16 16">
-                    <path d="M4 15a1 1 0 1 1 0-2 1 1 0 0 1 0 2zm0 1a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm8-1a1 1 0 1 1 0-2 1 1 0 0 1 0 2zm0 1a2 2 0 1 0 0-4 2 2 0 0 0 0 4zM.115 3.18A.5.5 0 0 1 .5 3h15a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 14 12H2a.5.5 0 0 1-.491-.408l-1.5-8a.5.5 0 0 1 .106-.411zm.987.82 1.313 7h11.17l1.313-7H1.102z" />
-                    <path fill-rule="evenodd" d="M6 1a2.498 2.498 0 0 1 4 0c.818 0 1.545.394 2 1 .67 0 1.552.57 2 1h-2c-.314 0-.611-.15-.8-.4-.274-.365-.71-.6-1.2-.6-.314 0-.611-.15-.8-.4a1.497 1.497 0 0 0-2.4 0c-.189.25-.486.4-.8.4-.507 0-.955.251-1.228.638-.09.13-.194.25-.308.362H3c.13-.147.401-.432.562-.545a1.63 1.63 0 0 0 .393-.393A2.498 2.498 0 0 1 6 1z" />
-                </svg>
-            </a>
-        </div>
+<a type="button" class="rz-border-radius-4 shadow border border-4 btn-lg btn btn-warning" data-toggle="tooltip"
+       data-placement="right" title="Regresar al inventario" href="inventario">
+        <i
+            class="oi oi-arrow-circle-left"/>
+    </a>
+    
 
         <p />
 
         <div class="card-header justify-content-center text-center bg-ordendecompracolor">
             <h3 class="card-title">
-                Registro de Compras
+                Compras
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-bag-plus-fill" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M10.5 3.5a2.5 2.5 0 0 0-5 0V4h5v-.5zm1 0V4H15v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V4h3.5v-.5a3.5 3.5 0 1 1 7 0zM8.5 8a.5.5 0 0 0-1 0v1.5H6a.5.5 0 0 0 0 1h1.5V12a.5.5 0 0 0 1 0v-1.5H10a.5.5 0 0 0 0-1H8.5V8z" />
                 </svg>
@@ -56,41 +39,51 @@
 
                 <div class="form-group col-3">
                     <label>Fecha</label>
-                    <InputDate @bind-Value="articulo.FechaCreacion" class="form-control" />
+                    <InputDate @bind-Value="FechaCompra" class="form-control" />
                 </div>
 
 
                 @*...................... Nombre ......................*@
 
                 <div class="form-group col-3">
-                    <label>Nombre</label>
-                    <InputText @bind-Value="articulo.Nombre" placeholder="Nombre articulo" class="form-control" />
-                    <ValidationMessage For="@(() => articulo.Nombre)" />
+                     <label>
+                            Articulo
+                            <div class="oi oi-cart"></div>
+                        </label>
+                        <select @bind="ArticuloSeleccionado" class="form-select text-14"
+                                @onfocusout="ObtenerDatosArticulo">
+                            <option value="0" disabled selected> Seleccione un articulo </option>
+                            @foreach (Articulo item in ArticuloList)
+                            {
+                                <option value="@item.ArticuloId">@item.Nombre</option>
+                            }
+                        </select>
                 </div>
 
                 @*...................... Categoria ......................*@
 
-                <div class="form-group col-3">
-                    <label>
-                        Categoria
-                        <div class="oi oi-sort-ascending"></div>
-                    </label>
-                    <InputSelect @bind-Value="articulo.CategoriaId" class="form-select text-14">
-                        <option value="0" disabled selected>Seleccione una categoria</option>
-                        @foreach (var item in CategoriaList)
-                        {
-                            <option value="@item.CategoriaId">@item.Descripcion</option>
-                        }
-                    </InputSelect>
-                    <ValidationMessage For="@(() => articulo.CategoriaId)" />
-                </div>
+                <div class="form-group col-md-3">
+                        <label>
+                            Suplidor
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-truck" viewBox="0 0 16 16">
+                        <path d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5v-7zm1.294 7.456A1.999 1.999 0 0 1 4.732 11h5.536a2.01 2.01 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456zM12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12v4zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
+                    </svg>
+                        </label>
+                        <select @bind="suplidor.SuplidorId" class="form-select text-14">
+                            <option value="0" disabled selected>Seleccione un suplidor</option>
+                            @foreach (Suplidor item in SuplidorList)
+                            {
+                                <option value="@item.SuplidorId">@item.Nombre </option>
+                            }
+                        </select>
+                    </div>
 
                 @*...................... Cantidad ......................*@
 
                 <div class="form-group col-3">
                     <label>Cantidad</label>
-                    <InputNumber @bind-Value="articulo.Cantidad" class="form-control" />
-                    <ValidationMessage For="@(() => articulo.Cantidad)" />
+                    <InputNumber @bind-Value="CantidadComprada" class="form-control" />
+                    <ValidationMessage For="@(() => CantidadComprada)" />
                 </div>
             </div>
             <br>
@@ -99,29 +92,21 @@
 
                 <div class="form-group col-3">
                     <label>Costo / Unidad</label>
-                    <InputNumber @bind-Value="articulo.Costo" class="form-control" />
-                    <ValidationMessage For="@(() => articulo.Costo)" />
+                    <InputNumber @bind-Value="articulo.Costo" class="form-control" readOnly="true"/>
+                    
                 </div>
 
                 @*...................... Precio ......................*@
 
                 <div class="form-group col-3">
                     <label>Precio</label>
-                    <InputNumber @bind-Value="articulo.Precio" class="form-control" />
-                    <ValidationMessage For="@(() => articulo.Precio)" />
+                    <InputNumber @bind-Value="Precio" class="form-control" />
+                    <ValidationMessage For="@(() => Precio)" />
                 </div>
 
-                @*...................... ITBIS ......................*@
+                
 
-                <div class="form-group col-md-3">
-                    <label>ITBIS</label>
-                    <InputSelect @bind-Value="articulo.ITBIS" class="form-select text-14">
-                        <option value="0" disabled selected>Seleccione un %</option>
-                        <option value="1">0%</option>
-                        <option value="18">18%</option>
-                    </InputSelect>
-                    <ValidationMessage For="@(() => articulo.ITBIS)" />
-                </div>
+                
 
                 @*...................... Botones ......................*@
 
@@ -135,14 +120,11 @@
                             <span class="oi oi-file"> Nuevo</span>
                         </button>
 
-                        <button type="submit" class="btn btn-lg btn-success" title="Guardar articulo">
-                            <span class="oi oi-document"> Guardar</span>
+                        <button type="submit" class="btn btn-lg btn-success" title="Comprar articulo">
+                            <span class="oi oi-document"> Comprar</span>
                         </button>
 
-                        <button type="button" class="btn btn-lg btn-danger" @onclick="Eliminar"
-                                title="Eliminar articulo">
-                            <span class="oi oi-trash"> Eliminar</span>
-                        </button>
+                        
 
                     </div>
                 </div>
@@ -161,13 +143,9 @@
 
                             <th class="border border-3">Categoria</th>
 
-                            <th class="border border-3">Cantidad</th>
+                            <th class="border border-3">Cantidad Registrada</th>
 
-                            <th class="border border-3">Costo / Unidad</th>
-
-                            <th class="border border-3">Precio</th>
-
-                            <th class="border border-3">Fecha de compra</th>
+                            <th class="border border-3">Fecha de registro</th>
 
                             <th class="border border-3">Ver</th>
                         </tr>
@@ -182,8 +160,8 @@
                         {
                             @foreach (var item in lista)
                             {
-                                Fecha = DateOnly.FromDateTime(item.FechaCreacion);
-                                @if (item.FechaCreacion.Month == Fecha.Month && item.FechaCreacion.Year == Fecha.Year && item.Cantidad < 50)
+                                FechaArticuloRegistrado = DateOnly.FromDateTime(item.FechaCreacion);
+                                @if (item.FechaCreacion.Month == FechaArticuloRegistrado.Month && item.FechaCreacion.Year == FechaArticuloRegistrado.Year && item.Cantidad < 50)
                                 {
                                     descripcion = categoriaBLL.Buscar(item.CategoriaId);
                                     if (descripcion == null) break;
@@ -195,10 +173,6 @@
                                         <td class="border border-3">@descripcion.Descripcion</td>
 
                                         <td class="border border-3">@item.Cantidad</td>
-
-                                        <td class="border border-3">RD$ @item.Costo</td>
-
-                                        <td class="border border-3">RD$ @item.Precio</td>
 
                                         <td class="border border-3">@item.FechaCreacion.ToString("dd/MM/yyyy")</td>
 
@@ -215,30 +189,54 @@
                 </table>
             </div>
         </div>
-    </div>
+   
 </EditForm>
 
 @code {
 
     #nullable disable // Para quitar el aviso de nulls
+
+    Compra compra = new Compra();
+
     Articulo articulo = new Articulo();
 
+    Suplidor suplidor = new Suplidor();
+
     [Parameter]
-    public int NewArticuloId { get; set; }
+    public int CompraId { get; set; }
 
-    private double Cantidad { get; set; }
+    private double CantidadComprada { get; set; }
 
-    private DateOnly Fecha { get; set; }
+    private decimal Precio { get; set; }
+
+    private DateOnly FechaCompra { get; set; }
+
+     private DateOnly FechaArticuloRegistrado { get; set; }
+
+    public int ArticuloSeleccionado { get; set; }
+
+    public string ArticuloComprado { get; set; }
 
     public List<Articulo> lista { get; set; } = new List<Articulo>();
+
+    [Inject]
+    public CompraBLL compraBLL { get; set; }
+
+
+    [Inject]
+    public ArticuloBLL articuloBLL { get; set; } // Inyectando BLL
+
+    [Inject]
+    public SuplidorBLL suplidorBLL { get; set; }
 
     private Categoria descripcion { get; set; }
 
     [Inject]
     public CategoriaBLL categoriaBLL { get; set; } // Inyectando BLLS
 
-    [Inject]
-    public ArticuloBLL articuloBLL { get; set; } // Inyectando BLL
+    List<Articulo> ArticuloList = new List<Articulo>();
+
+    List<Suplidor> SuplidorList = new List<Suplidor>();
 
     List<Categoria> CategoriaList = new List<Categoria>();
 
@@ -247,98 +245,111 @@
     protected override void OnInitialized()
     {
         articulo = new Articulo();
-        CategoriaList = categoriaBLL.GetList(c => true);
+        suplidor = new Suplidor();
+        ArticuloList = articuloBLL.GetList(c => true);
+        SuplidorList = suplidorBLL.GetList(c => true);
         lista = articuloBLL.GetList(a => true);
 
-        if (this.NewArticuloId > 0)
-        {
-            this.articulo.ArticuloId = this.NewArticuloId;
-            this.Buscar();
-        }
-
-        if (lista != null)
-        {
-            this.Cantidad = articulo.Cantidad;
-        }
+        
     }
 
-    public void Nuevo() // Nuevo articulo
+    public void Nuevo() // Nueva compra
     {
+        compra = new Compra();
         articulo = new Articulo();
-        CategoriaList = categoriaBLL.GetList(c => true);
+        suplidor = new Suplidor();
+        ArticuloSeleccionado = 0;
+        CantidadComprada = 0;
+        Precio = 0;
+        ArticuloList = articuloBLL.GetList(c => true);
+        SuplidorList = suplidorBLL.GetList(c => true);
+        lista = articuloBLL.GetList(a => true);
     }
+
+    private void ObtenerDatosArticulo() // Obteniendo los datos del articulo seleccionado
+    {
+        Articulo auxArticulo = articuloBLL.Buscar(ArticuloSeleccionado);
+
+        if (auxArticulo != null)
+        {
+            
+            ArticuloComprado = auxArticulo.Nombre;
+
+            articulo.Costo = auxArticulo.Costo; // Mostrando la cantidad de unidades del articulo seleccionado
+
+       
+        }
+    }
+
 
     public void Guardar() // Guardar articulo
     {
-        if (articulo.Precio < articulo.Costo)
+        if (compra.ArticuloId == 0) // Validacion
+        {
+            Toast.ShowWarning("Tiene que seleccionar un articulo.");
+            return;
+        }
+
+         if (compra.SuplidorId == 0) // Validacion
+        {
+            Toast.ShowWarning("Tiene que seleccionar un suplidor.");
+            return;
+        }
+
+        if (Precio < articulo.Costo)
         {
             Toast.ShowWarning("El precio debe ser mayor al costo"); // Validacion
             return;
         }
 
-        var articulo2 = articuloBLL.ExisteNombre(articulo.Nombre);
-        if (articulo2 == null) //si no existe
+         if (CantidadComprada > articulo.Cantidad) // Validacion
         {
-            if (articuloBLL.Guardar(articulo))
-            {
-                Toast.ShowSuccess($"Articulo: {articulo.Nombre}, Guardado correctamente");
-                articulo = new Articulo();
-            }
-            else
-                Toast.ShowError("No fue posible guardar");
+            Toast.ShowWarning("La cantidad de compra no puede ser mayor a la existencia.");
+            return;
         }
-        else // si existe
+
+       bool guardado;
+
+    
+
+        guardado = compraBLL.Guardar(compra);
+        if (guardado)
         {
-            if (articulo2.Nombre.ToLower() == articulo.Nombre.ToLower() && articulo2.ArticuloId == articulo.ArticuloId)
-            {
-                if (articuloBLL.Guardar(articulo))
-                {
-                    Toast.ShowSuccess($"Articulo: {articulo.Nombre}, Guardado correctamente");
-                    articulo = new Articulo();
-                }
-                else
-                    Toast.ShowError("No fue posible guardar");
-            }
-            else
-            {
-                Toast.ShowError($"Articulo: {articulo.Nombre}, ya esta registrado");
-            }
-        }
+            guardado = true;
+            compra = new Compra();
+            articulo = new Articulo();
+            suplidor = new Suplidor();
+            ArticuloSeleccionado = 0;
+            CantidadComprada = 0;
+            Precio = 0;
+            Toast.ShowSuccess($"Compra exitosa");
+               
+           }
+        else
+            Toast.ShowError("No fue posible guardar ");
+    }
+       
+
+        
     }
 
-    public void Buscar() // Buscar articulo
-    {
-        if (this.articulo.ArticuloId > 0)
-        {
-            var Articulo = articuloBLL.Buscar(articulo.ArticuloId);
 
-            if (Articulo != null)
-            {
-                articulo = Articulo;
-
-                Toast.ShowSuccess($"Articulo: {articulo.Nombre}, encontrado ");
-            }
-            else
-            {
-                Toast.ShowWarning($"No existe un articulo con este Id: {articulo.ArticuloId}");
-            }
-        }
-    }
-
-    public void Eliminar() // Eliminar articulo
+    public void Eliminar() // Eliminar compra
     {
         bool Eliminar;
 
-        Eliminar = articuloBLL.Eliminar(articulo.ArticuloId);
+        Eliminar = compraBLL.Eliminar(compra.CompraId);
 
         if (Eliminar)
         {
-            articulo = new Articulo();
-            CategoriaList = categoriaBLL.GetList(c => true);
+            compra = new Compra();
+            ArticuloList = articuloBLL.GetList(c => true);
+            SuplidorList = suplidorBLL.GetList(c => true);
             Toast.ShowSuccess("Eliminado correctamente");
         }
         else
             Toast.ShowError("No fue posible eliminar");
     }
-}
+    
+
 
