--- a/Pages/Registros/R_Articulos.razor
+++ b/Pages/Registros/R_Articulos.razor
@@ -33,12 +33,29 @@
                         <label>Fecha</label>
                         <InputDate @bind-Value="articulo.FechaCreacion" class="form-control"/>
                     </div>
+                     
+                     @*...................... Suplidor ......................*@
+                     <div class="form-group col-md-3">
+                        <label>
+                            Suplidor
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-truck" viewBox="0 0 16 16">
+                        <path d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5v-7zm1.294 7.456A1.999 1.999 0 0 1 4.732 11h5.536a2.01 2.01 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456zM12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12v4zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
+                    </svg>
+                        </label>
+                        <select @bind="suplidor.SuplidorId" class="form-select text-14">
+                            <option value="0" disabled selected>Seleccione un suplidor</option>
+                            @foreach (Suplidor item in SuplidorList)
+                            {
+                                <option value="@item.SuplidorId">@item.Nombre </option>
+                            }
+                        </select>
+                    </div>
 
 
                     @*...................... Nombre ......................*@
 
                     <div class="form-group col-3">
-                        <label>Nombre</label>
+                        <label>Descripcion</label>
                         <InputText @bind-Value="articulo.Nombre" placeholder="Nombre articulo" class="form-control"/>
                         <ValidationMessage For="@(() => articulo.Nombre)"/>
                     </div>
@@ -78,25 +95,11 @@
                         <ValidationMessage For="@(() => articulo.Costo)"/>
                     </div>
 
-                    @*...................... Precio ......................*@
+                    
 
-                    <div class="form-group col-3">
-                        <label>Precio</label>
-                        <InputNumber @bind-Value="articulo.Precio" class="form-control"/>
-                        <ValidationMessage For="@(() => articulo.Precio)"/>
-                    </div>
+                    
 
-                    @*...................... ITBIS ......................*@
-
-                    <div class="form-group col-md-3">
-                        <label>ITBIS</label>
-                        <InputSelect @bind-Value="articulo.ITBIS" class="form-select text-14">
-                            <option value="0" disabled selected>Seleccione un %</option>
-                            <option value="1">0%</option>
-                            <option value="18">18%</option>
-                        </InputSelect>
-                        <ValidationMessage For="@(() => articulo.ITBIS)"/>
-                    </div>
+                   
 
                     @*...................... Consultar Articulo ......................*@
 
@@ -141,6 +144,9 @@
 #nullable disable // Para quitar el aviso de nulls
     Articulo articulo = new Articulo();
 
+    Suplidor suplidor = new Suplidor();
+    
+
     [Parameter]
     public int ArticuloId { get; set; }
 
@@ -150,7 +156,12 @@
     [Inject]
     public ArticuloBLL articuloBLL { get; set; } // Inyectando BLL
 
+    [Inject]
+    public SuplidorBLL suplidorBLL { get; set; } // Inyectando BLL
+
     List<Categoria> CategoriaList = new List<Categoria>();
+
+    List<Suplidor> SuplidorList = new List<Suplidor>();
 
 
     //-----------------------------------------------------------------------
@@ -158,7 +169,9 @@
     protected override void OnInitialized()
     {
         articulo = new Articulo();
+        suplidor = new Suplidor();
         CategoriaList = categoriaBLL.GetList(c => true);
+        SuplidorList = suplidorBLL.GetList(c => true);
 
         if (ArticuloId > 0)
         {
@@ -175,6 +188,12 @@
 
     public void Guardar() // Guardar articulo
     {
+         if (articulo.SuplidorId == 0) // Validacion
+        {
+            Toast.ShowWarning("Tiene que seleccionar un suplidor.");
+            return;
+        }
+
         if (articulo.Precio < articulo.Costo)
         {
             Toast.ShowWarning("El precio debe ser mayor al costo"); // Validacion
