--- a/Pages/Registros/Inventario_Articulos.razor
+++ b/Pages/Registros/Inventario_Articulos.razor
@@ -1,4 +1,4 @@
-﻿@page "/articulos"
+@page "/articulos"
 
 @page "/articulos/{ArticuloId:int}"
 
@@ -38,6 +38,7 @@
               
             </div>
         </div>
+    </div>
     </div>
 </EditForm>
 
@@ -151,4 +152,3 @@
             Toast.ShowError("No fue posible eliminar");
     }
 }
-
