--- a/Pages/Consultas/C_Articulos.razor
+++ b/Pages/Consultas/C_Articulos.razor
@@ -85,7 +85,7 @@
 
                 <th>Precio / Venta</th>
 
-                <th>ITBIS</th>
+         
 
                 <th>Fecha Registro</th>
 
@@ -111,13 +111,13 @@
 
                         <td>@descripcion.Descripcion</td>
 
-                        <td>@item.Cantidad</td>
+                        <td>@item.CantidadComprada</td>
 
                         <td>RD$ @item.Costo</td>
 
                         <td>RD$ @item.Precio</td>
 
-                        <td>@item.ITBIS %</td>
+                     
 
                         <td>@item.FechaCreacion.ToString("dd/MM/yyyy")</td>
                         <td>
