--- a/Pages/Registros/R_Articulos.razor
+++ b/Pages/Registros/R_Articulos.razor
@@ -31,37 +31,23 @@
 
                     <div class="form-group col-3">
                         <label>Fecha</label>
-                        <InputDate @bind-Value="articulo.FechaCreacion" class="form-control" />
+                        <InputDate @bind-Value="articulo.FechaCreacion" class="form-control bg-fechasColor" />
                     </div>
-
-                    @*...................... Suplidor ......................*@
-                    <div class="form-group col-md-3">
-                        <label>
-                            Suplidor
-                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-truck" viewBox="0 0 16 16">
-                                <path d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5v-7zm1.294 7.456A1.999 1.999 0 0 1 4.732 11h5.536a2.01 2.01 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456zM12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12v4zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z" />
-                            </svg>
-                        </label>
-                        <select @bind="articulo.SuplidorId" class="form-select text-14">
-                            <option value="0" disabled selected>Seleccione un suplidor</option>
-                            @foreach (Suplidor item in SuplidorList)
-                            {
-                                <option value="@item.SuplidorId">@item.Nombre </option>
-                            }
-                            <ValidationMessage For="@(() => articulo.SuplidorId)" />
-                        </select>
-                    </div>
-
 
                     @*...................... Nombre ......................*@
 
                     <div class="form-group col-3">
-                        <label>Descripcion</label>
+                        <label>Nombre</label>
                         <InputText @bind-Value="articulo.Nombre" placeholder="Nombre articulo" class="form-control" />
                         <ValidationMessage For="@(() => articulo.Nombre)" />
+                            <br>
                     </div>
+                    
+                </div>
 
-                    @*...................... Categoria ......................*@
+                       <div class="row">
+
+                     @*...................... Categoria ......................*@
 
                     <div class="form-group col-3">
                         <label>
@@ -78,23 +64,49 @@
                         <ValidationMessage For="@(() => articulo.CategoriaId)" />
                     </div>
 
+
+
+                    @*...................... Suplidor ......................*@
+
+                      <div class="form-group col-md-3">
+                        <label>
+                            Suplidor
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-truck" viewBox="0 0 16 16">
+                                <path d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5v-7zm1.294 7.456A1.999 1.999 0 0 1 4.732 11h5.536a2.01 2.01 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456zM12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12v4zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z" />
+                            </svg>
+                        </label>
+                        <select @bind="articulo.SuplidorId" class="form-select text-14">
+                            <option value="0" disabled selected>Seleccione un suplidor</option>
+                            @foreach (Suplidor item in SuplidorList)
+                            {
+                                <option value="@item.SuplidorId">@item.Nombre </option>
+                            }
+                            <ValidationMessage For="@(() => articulo.SuplidorId)" />
+                        </select>
+                        <br>
+                    </div>
+                    
+                </div>         
+
+                   <div class="row">
+
                     @*...................... Cantidad ......................*@
 
                     <div class="form-group col-3">
                         <label>Cantidad</label>
-                        <InputNumber @bind-Value="articulo.Cantidad" class="form-control" />
-                        <ValidationMessage For="@(() => articulo.Cantidad)" />
+                        <InputNumber @bind-Value="articulo.CantidadRegistrada" class="form-control" />
+                        <ValidationMessage For="@(() => articulo.CantidadRegistrada)" />
                     </div>
-                </div>
-                <br>
-
-                <div class="row">
 
                     <div class="form-group col-3">
                         <label>Costo / Unidad</label>
                         <InputNumber @bind-Value="articulo.Costo" class="form-control" />
                         <ValidationMessage For="@(() => articulo.Costo)" />
+                            <br>
                     </div>
+                    
+                </div>
+                          
 
                     @*...................... Consultar Articulo ......................*@
 
@@ -103,12 +115,12 @@
                     <div class="form-group col-md-3" style="margin: auto;">
                         <a class="rz-border-radius-4 shadow border border-4 btn btn-lg btn btn-warning"
                            data-toggle="tooltip" data-placement="right" title="Ingresar al inventario"
-                           href="inventario">
+                           href="inventarioArticulos">
                             Articulos
                             <i class="oi oi-cart"></i>
                         </a>
                     </div>
-                </div>
+              
                 <br>
 
                 @*...................... Botones ......................*@
@@ -184,59 +196,38 @@
 
     public void Guardar() // Guardar articulo
     {
+        if (articulo.Nombre == string.Empty)
+        {
+            Toast.ShowWarning("Ingrese el nombre del articulo");
+            return;
+        }
+
+        if (articulo.CategoriaId == 0)
+        {
+            Toast.ShowWarning("Seleccionar una categoria");
+
+            return;
+        }
+
         if (articulo.SuplidorId == 0)
         {
             Toast.ShowWarning("Seleccionar un suplidor");
             return;
         }
 
+        
 
+        
 
-
-        if (articulo.Cantidad == 0)
+        if (articulo.CantidadRegistrada == 0)
         {
             Toast.ShowWarning("Ingresar una cantidad");
-
-        if (articulo.Cantidad == 0)
-        {
-            Toast.ShowWarning("Ingresar una cantidad");
-            return;
-        }
-
-        if (articulo.Nombre == null)
-        {
-            Toast.ShowWarning("Ingresar la descripción del articulo");
             return;
         }
 
         if (articulo.Costo == 0)
         {
             Toast.ShowWarning("Ingresar un Costo / Unidad");
-            return;
-        }
-
-        if (articulo.CategoriaId == 0)
-        {
-            Toast.ShowWarning("Seleccionar una categoria");
-
-            return;
-        }
-
-        if (articulo.Nombre == null)
-        {
-            Toast.ShowWarning("Ingresar la descripción del articulo");
-            return;
-        }
-
-        if (articulo.Costo == 0)
-        {
-            Toast.ShowWarning("Ingresar un Costo / Unidad");
-            return;
-        }
-
-        if (articulo.CategoriaId == 0)
-        {
-            Toast.ShowWarning("Seleccionar una categoria");
             return;
         }
 
@@ -270,6 +261,7 @@
             }
         }
     }
+    
 
     public void Buscar() // Buscar articulo
     {
@@ -305,5 +297,4 @@
         else
             Toast.ShowError("No fue posible eliminar");
     }
-}
 }
