--- a/Pages/Registros/R_Suplidor.razor
+++ b/Pages/Registros/R_Suplidor.razor
@@ -52,9 +52,33 @@
                         <InputText @bind-Value="suplidor.Direccion" placeholder="Dirección" class="form-control"
                                 />
                         <ValidationMessage For="@(() => suplidor.Direccion)"/>
+                            <br>
                     </div>
 
-                    @*...................... Email ......................*@
+                 
+
+                     @*...................... Consultar Suplidores ......................*@
+
+                    <div class="form-group col-md-3" style="margin: auto;">
+                        <a class="rz-border-radius-4 shadow border border-4 btn btn-lg btn btn-warning"
+                           data-toggle="tooltip" data-placement="right" title="Ingresar al reporte de suplidores"
+                           href="reportesuplidores">
+                            Suplidores
+                            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-truck" viewBox="0 0 16 16">
+                                <path d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5v-7zm1.294 7.456A1.999 1.999 0 0 1 4.732 11h5.536a2.01 2.01 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456zM12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12v4zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+
+                    
+                    
+                   
+                 
+
+                    <div class="row">
+
+                        @*...................... Email ......................*@
 
                     <div class="form-group col-3">
                         <label>
@@ -68,10 +92,6 @@
                                    class="form-control"/>
                         <ValidationMessage For="@(() => suplidor.Email)"/>
                     </div>
-                    <br>
-                    <p/>
-
-                    <div class="row">
 
                         @*...................... Telefono ......................*@
 
@@ -85,7 +105,13 @@
                             <InputText @bind-Value="suplidor.Telefono" placeholder="Numero teléfonico"
                                        class="form-control"/>
                             <ValidationMessage For="@(() => suplidor.Telefono)"/>
+                                <br>
                         </div>
+                        </div>
+
+                      
+                       
+                       <div class="row">
 
                         @*...................... Descripción Articulo ......................*@
 
@@ -98,28 +124,16 @@
 
                         @*...................... Fecha Ingreso ......................*@
 
-                        <div class="form-group col-2">
+                        <div class="form-group col-3 ">
                             <label>Fecha Ingreso </label>
-                            <InputDate @bind-Value="suplidor.Fecha" class="form-control"/>
-                        </div>
+                            <InputDate @bind-Value="suplidor.Fecha" class="form-control bg-fechasColor"/>
+                        </div >
                     </div>
+                    
 
-                    @*...................... Consultar Suplidores ......................*@
-
-                    <p/>
-                    <p/>
-                    <div class="form-group col-md-3" style="margin: auto;">
-                        <a class="rz-border-radius-4 shadow border border-4 btn btn-lg btn btn-warning"
-                           data-toggle="tooltip" data-placement="right" title="Ingresar al reporte de suplidores"
-                           href="inventario">
-                            Suplidores
-                            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-truck" viewBox="0 0 16 16">
-                                <path d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5v-7zm1.294 7.456A1.999 1.999 0 0 1 4.732 11h5.536a2.01 2.01 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456zM12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12v4zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
-                            </svg>
-                        </a>
-                    </div>
+                   
                 </div>
-            </div>
+           
             <br>
 
             @*...................... Botones ......................*@
