--- a/Pages/Registros/R_Ventas.razor
+++ b/Pages/Registros/R_Ventas.razor
@@ -35,7 +35,7 @@
 
                     <div class="form-group col-md-2">
                         <label>Fecha</label>
-                        <InputDate @bind-Value="venta.Fecha" class="form-control col-8" />
+                        <InputDate @bind-Value="venta.Fecha" class="form-control col-8 bg-fechasColor" />
                     </div>
 
                     @*...................... Cliente ......................*@
@@ -68,9 +68,12 @@
                         <select @bind="ArticuloSeleccionado" class="form-select text-14"
                                 @onfocusout="ObtenerDatosArticulo">
                             <option value="0" disabled selected> Seleccione un articulo </option>
-                            @foreach (Compra item in CompraList)
+                            @foreach (Articulo item in ArticuloList)
                             {
-                                <option value="@item.CompraId">@item.CompraId</option>
+                                if (articulo.Precio > 0){
+                                     <option value="@item.ArticuloId">@item.Nombre</option>
+                                }
+                                
                             }
                         </select>
                     </div>
@@ -121,10 +124,10 @@
                             @foreach (VentasDetalle item in venta.ventasDetalle)
                             {
                                 <tr class="text-center">
-                                    <td>@item.CompraId</td>
+                                    <td>@item.ArticuloId</td>
                                     <td>@item.Descripcion</td>
                                     <td>@item.Cantidad</td>
-                                    <td>RD$ @item.PrecioArticuloComprado</td>
+                                    <td>RD$ @articulo.Precio</td>
                                     <td>RD$ @item.Importe</td>
                                     <td>
                                         <a class="btn-group-sm btn-close btn btn-group-lg btn-outline-danger"
@@ -261,8 +264,6 @@
     VentasDetalle Detalle = new VentasDetalle();
     Articulo articulo = new Articulo();
 
-    Compra compra = new Compra();
-
     public int ArticuloSeleccionado { get; set; }
 
     public int PagoSeleccionado { get; set; }
@@ -285,8 +286,6 @@
 
     List<Articulo> ArticuloList = new List<Articulo>();
 
-    List<Compra> CompraList = new List<Compra>();
-
     List<Pago> MetodoPagoList = new List<Pago>();
 
 
@@ -299,9 +298,6 @@
     public ArticuloBLL articuloBLL { get; set; } // Inyectando BLLS
 
     [Inject]
-    public CompraBLL compraBLL { get; set; }
-
-    [Inject]
     public ClientesBLL clienteBLL { get; set; }
 
     [Inject]
@@ -312,7 +308,7 @@
 
     protected override void OnInitialized()
     {
-        CompraList = compraBLL.GetList(p => true);
+        ArticuloList = articuloBLL.GetList(p => true);
         ClienteList = clienteBLL.GetList(p => true);
         MetodoPagoList = pagoBLL.GetList(c => true);
 
@@ -337,37 +333,38 @@
 
         venta = new Ventas();
         Detalle = new VentasDetalle();
-        CompraList = compraBLL.GetList(p => true);
+
+        ArticuloList = articuloBLL.GetList(p => true);
         ClienteList = clienteBLL.GetList(p => true);
         MetodoPagoList = pagoBLL.GetList(c => true);
     }
 
     private void ObtenerDatosArticulo() // Obteniendo los datos del articulo seleccionado
     {
-        Compra auxCompra = compraBLL.Buscar(ArticuloSeleccionado);
+       Articulo auxArticulo = articuloBLL.Buscar(ArticuloSeleccionado);
 
-        if (auxCompra != null)
+        if (auxArticulo != null)
         {
-            precioArticuloComprado = auxCompra.Precio; // Mostrando el precio del articulo seleccionado
+            precioArticuloComprado = auxArticulo.Precio; // Mostrando el precio del articulo seleccionado
             //descripcion = auxCompra.ArticuloComprado; // Obteniendo el nombre del articulo
 
-            venta.Existencia = auxCompra.CantidadComprada; // Mostrando la cantidad de unidades del articulo seleccionado
+            venta.Existencia = auxArticulo.CantidadComprada; // Mostrando la cantidad de unidades del articulo seleccionado
 
-            venta.SubTotal = auxCompra.Precio * Convert.ToDecimal(Detalle.Cantidad); // Mostrando el subtotal de esa venta
+            venta.SubTotal = auxArticulo.Precio * Convert.ToDecimal(Detalle.Cantidad); // Mostrando el subtotal de esa venta
 
             ITBIS = venta.SubTotal * 18 / 100; // Calculo de ITBIS
 
             venta.ITBIS = ITBIS;
 
-            venta.Existencia = auxCompra.CantidadComprada - Detalle.Cantidad; // Actualizando cantidad reducida de articulos
+            venta.Existencia = auxArticulo.CantidadComprada - Detalle.Cantidad; // Actualizando cantidad reducida de articulos
         }
     }
 
     private void ActualizandoUnidadesArticulo()
     {
-        Compra auxCompra = compraBLL.Buscar(ArticuloSeleccionado);
+        Articulo auxArticulo = articuloBLL.Buscar(ArticuloSeleccionado);
 
-        if (auxCompra != null)
+        if (auxArticulo != null)
         {
             venta.UnidadesVendidas = Detalle.Cantidad; // Las unidades que se vendieron
         }
@@ -376,9 +373,9 @@
 
     private void ObtenerDevuelta() // Devuelta que le sobra al cliente
     {
-       Compra auxCompra = compraBLL.Buscar(ArticuloSeleccionado);
+       Articulo auxArticulo = articuloBLL.Buscar(ArticuloSeleccionado);
 
-        if (auxCompra != null)
+        if (auxArticulo != null)
         {
             if (venta.PagoObtenido > venta.Total)
             {
@@ -521,7 +518,7 @@
         {
             this.venta.ventasDetalle.Add(new VentasDetalle
                 {
-                    CompraId = ArticuloSeleccionado,
+                    ArticuloId = ArticuloSeleccionado,
                     PagoId = PagoSeleccionado,
                     Descripcion = descripcion, // Agregando el detalle
                     Cantidad = Detalle.Cantidad,
@@ -540,24 +537,24 @@
         Toast.ShowInfo("Detalle removido");
         this.venta.ventasDetalle.Remove(item);
 
-        Compra auxCompra= compraBLL.Buscar(ArticuloSeleccionado);
+        Articulo auxArticulo= articuloBLL.Buscar(ArticuloSeleccionado);
 
-        if (auxCompra != null)
+        if (auxArticulo != null)
         {
-            venta.Existencia = auxCompra.CantidadComprada;
+            venta.Existencia = auxArticulo.CantidadComprada;
         }
     }
 
 
     public void MostrarImporte() // Calculando el Total
     {
-        Compra auxCompra= compraBLL.Buscar(ArticuloSeleccionado);
+        Articulo auxArticulo= articuloBLL.Buscar(ArticuloSeleccionado);
 
-        if (auxCompra != null)
+        if (auxArticulo != null)
         {
-            precioArticuloComprado = auxCompra.Precio; // Precio del articulo seleccionado
+            precioArticuloComprado = auxArticulo.Precio; // Precio del articulo seleccionado
 
-            importe = auxCompra.Precio * Convert.ToDecimal(Detalle.Cantidad); // Importe, cantidad por precio
+            importe = auxArticulo.Precio * Convert.ToDecimal(Detalle.Cantidad); // Importe, cantidad por precio
         }
     }
 
